--- a/FOOD_DELIVERY_SERVICE/code.html
+++ b/FOOD_DELIVERY_SERVICE/code.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>best online food delivary service || MY DINE </title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/phone.css">
 
+</head>
+
+<body>
+    <nav class="navbar">
+        <div id="logo">
+            <img src="logo.png" alt="error">
+        </div>
+        <ul>
+            <li class="item"><a href="">HOME</a></li>
+            <li class="item"><a href="">SERVICES</a></li>
+            <li class="item"><a href="">OUR CLIENTS</a></li>
+            <li class="item"><a href="">CONTACT US</a></li>
+        </ul>
+    </nav>
+    <section id="HOME">
+        <h1 class="h-primary">Welcome To The Best Food Delivary Website</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eaque amet suscipit libero eum tempore
+            voluptatibus voluptatum magnam in enim.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi quibusdam tempore dolor repellendus alias
+            minima modi esse itaque totam hic.</p>
+        <button class="btn">Order Now</button>
+    </section>
+    <section id="service-container">
+        <h1 class="h-primary center">OUR SERVICES</h1>
+        <div id="service">
+            <div class="box" id="box1">
+                <img src="Pizza-.jpg" alt="pizza">
+                <h2 class="h-seconary center">FOOD CATERING</h2>
+                <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos earum voluptate
+                    aliquam inventore, ea aliquid distinctio, repudiandae animi iure culpa quaerat velit in quia
+                    accusantium!</p>
+            </div>
+            <div class="box" id="box2">
+                <img src="fullplate.png" alt="">
+                <h2 class="h-seconary center">BULK ORDERING</h2>
+                <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos earum voluptate
+                    aliquam inventore, ea aliquid distinctio, repudiandae animi iure culpa quaerat velit in quia
+                    accusantium!</p>
+            </div>
+            <div class="box" id="box3">
+                <img src="delivary.jpg" alt="">
+                <h2 class="h-seconary center">FOOD ORDERING</h2>
+                <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos earum voluptate
+                    aliquam inventore, ea aliquid distinctio, repudiandae animi iure culpa quaerat velit in quia
+                    accusantium!</p>
+            </div>
+        </div>
+    </section>
+    <section id="client-section">
+        <h1 class="h-primary center">OUR CLIENTS</h1>
+        <div id="client">
+            <div class="client-item">
+                <img src="hp.png" alt="">
+            </div>
+            <div class="client-item">
+                <img src="skype.png" alt="">
+            </div>
+            <div class="client-item">
+                <img src="Flipkart-logo.png" alt="">
+            </div>
+            <div class="client-item">
+                <img src="Amazon_logo.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <h1 class="h-primary center">CONTACT US</h1>
+        <div class="contact-box">
+            <form action="">
+                <div class="form-grp">
+                    <label for=""></label>
+                    <input type="text" name="name" id="name" placeholder="Enter your Name">
+                </div>
+                <div class="form-grp">
+                    <label for=""></label>
+                    <input type="email" name="Name" id="Email" placeholder="Enter your Email">
+                </div>
+                <div class="form-grp">
+                    <label for=""></label>
+                    <input type="phone" name="name" id="phone" placeholder="Enter your phone number">
+                </div>
+                <div class="form-grp">
+                    <label for=""></label>
+                    <textarea name="message" id="message" cols="30" rows="15"> </textarea>
+                </div>
+            </form>
+        </div>
+    </section>
+</body>
+</html>
